Closed Bug 1696819 Opened 3 years ago Closed 3 years ago

Color mapping is off on some cases

Categories

(Core :: Graphics: Color Management, defect)

Firefox 88
x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
89 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox86 --- unaffected
firefox87 --- unaffected
firefox88 --- fixed
firefox89 --- fixed

People

(Reporter: xwissen, Assigned: jrmuizel)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

Attached image index.png

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:87.0) Gecko/20100101 Firefox/87.0

Steps to reproduce:

Open different images on websites or this test image for example
https://commons.wikimedia.org/wiki/File:NTV7_Testpattern.png

Setting:
gfx.color_management.mode is on 2 (standard)

Commit that introduced the issue:
https://hg.mozilla.org/integration/autoland/rev/fa296c4907207b2d7658a290dfef7999a632c13b

Actual results:

Color offset is really noticeable for some colors by eye.

Attached image:
Hex value is #00ffff
In broken version it is #95fcfd (Firefox color picker & system utility)
In broken version with gfx.color_management.mode on 0 it looks good.

Expected results:

Correct colors 5 row 3 col should be #00ffff

OS: Unspecified → Linux
Hardware: Unspecified → x86_64
Version: Firefox 87 → Firefox 88
Component: Untriaged → GFX: Color Management
Flags: needinfo?(jmuizelaar)
Product: Firefox → Core
Regressed by: 1694680
Has Regression Range: --- → yes

Since the status are different for nightly and release, what's the status for beta?
For more information, please visit auto_nag documentation.

Can you attach the CMSOutputProfile section of about:support?

Flags: needinfo?(jmuizelaar) → needinfo?(xwissen)

Can you also attach the output of: xprop -root XFree86_DDC_EDID1_RAWDATA

For my own reference, here's Chrome's handling of this kind of thing:
https://source.chromium.org/chromium/chromium/src/+/master:ui/display/util/display_util.cc;drc=65b725cc309dff780b21d4f289e86847b97200d6;bpv=1;bpt=1;l=75

x, do colors look correct in Chrome?

(In reply to Release mgmt bot [:sylvestre / :calixte / :marco for bugbug] from comment #1)

Since the status are different for nightly and release, what's the status for beta?
For more information, please visit auto_nag documentation.

Beta build is broken in latest bin version i tried - added the commit hash/link in the report

(In reply to Jeff Muizelaar [:jrmuizel] from comment #2)

Can you attach the CMSOutputProfile section of about:support?

CMSOutputProfile: AAABOAAAAAAAAAAAbW50clJHQiBYWVogAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGclhZWgAAAMwAAAAUZ1hZWgAAAOAAAAAUYlhZWgAAAPQAAAAUclRSQwAAAQgAAAAOZ1RSQwAAARgAAAAOYlRSQwAAASgAAAAOWFlaIAAAAAAAAJ8uAABNoQAAAalYWVogAAAAAAAAMwsAAKXzAAAL0lhZWiAAAAAAAAAkmwAADGsAAMWwY3VydgAAAAAAAAABAjMAAGN1cnYAAAAAAAAAAQIzAABjdXJ2AAAAAAAAAAECMwAA
XFree86_DDC_EDID1_RAWDATA(INTEGER) = 0, -1, -1, -1, -1, -1, -1, 0, 77, 16, -115, 20, 0, 0, 0, 0, 5, 28, 1, 4, -91, 34, 19, 120, 14, -44, 19, -87, 83, 53, -68, 37, 12, 80, 82, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 77, -48, 0, -96, -16, 112, 62, -128, 48, 32, 53, 0, 88, -62, 16, 0, 0, 24, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -2, 0, 70, 78, 86, 68, 82, -128, 76, 81, 49, 53, 54, 68, 49, 0, 0, 0, 0, 0, 2, 65, 3, 40, 1, 18, 0, 0, 11, 1, 10, 32, 32, 0, -90

Chromium and every other program i tried including pre-change had the correct color code with an color picker 00ff00.

Flags: needinfo?(xwissen)

x, can you also attach the contents of xrandr --verbose?

Flags: needinfo?(xwissen)
Attached file xrandr
```
Flags: needinfo?(xwissen)

I tried it on another PC and the colors are also off in the testpattern, but not that far. In the testpatterns #00ffff is #14ffff for example

This code doesn't seem to be working correctly and was broken
accidentally before. Intentionally break it for now to avoid the
regression.

Assignee: nobody → jmuizelaar

Comment on attachment 9212679 [details]
Bug 1696819. Disable generating a profile from the EDID data.

Beta/Release Uplift Approval Request

  • User impact if declined: Wrong colors sometimes on Linux
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This reverts us to the same behaviour we had in 87
  • String changes made/needed:
Attachment #9212679 - Flags: approval-mozilla-beta?
Pushed by jmuizelaar@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/88275f615ea5
Disable generating a profile from the EDID data. r=aosmond
Status: UNCONFIRMED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch

Comment on attachment 9212679 [details]
Bug 1696819. Disable generating a profile from the EDID data.

Reverts us back to Fx87 behavior. Approved for 88.0b6.

Attachment #9212679 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Looks fixed in stable. V87 on Android is unusable. Colors are so far of. Black is more like #888 (not measured) and is horrible on an OLED.

x, the commit from your initial comment is not in 87. It sounds like the Android problem might be something different. Can you file a separate issue for that?

Flags: needinfo?(xwissen)

OK, but looks really similar and in nightly it is gone. I will test a little bit before i open an issue.

Flags: needinfo?(xwissen)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: