Bug 1696819. Disable generating a profile from the EDID data. r=aosmond

This code doesn't seem to be working correctly and was broken
accidentally before. Intentionally break it for now to avoid the
regression.

Differential Revision: https://phabricator.services.mozilla.com/D110347